# echozap

./: .env.example  .gitignore  Caddyfile  IDEA.md  Makefile  alexa-interaction-model.json  docker-compose.override.yml  docker-compose.yml
brain/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
brain/alembic/: env.py
brain/alembic/versions/: aab896a5964f_initial_schema.py
brain/src/: config.py  main.py
brain/src/agents/: __init__.py  base.py  classifier.py  context_analyzer.py  reply_generator.py  summarizer.py
brain/src/alexa/: __init__.py  dispatcher.py  middleware.py  router.py  session.py
brain/src/alexa/handlers/: __init__.py  check_messages.py  generate_reply.py  play_audio.py  read_messages.py  send_message.py  summarize.py
brain/src/audio/: __init__.py  processor.py
brain/src/database/: __init__.py  engine.py  models.py  repo.py
brain/src/notifications/: __init__.py  proactive.py
brain/src/scheduler/: __init__.py  tasks.py
brain/src/webhook/: __init__.py  processor.py  router.py
brain/src/whatsapp/: __init__.py  client.py  models.py  webhook.py
scripts/: setup.sh  whatsapp-qr.sh
