[project]
name = "whatsapp-brain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi>=0.129.2",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "pydantic-ai[anthropic]>=1.62.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "redis[hiredis]>=7.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
