[project]
name = "whatsapp-brain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi>=0.129.2",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "pydantic-ai[anthropic]>=1.62.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "redis[hiredis]>=7.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff]
line-length = 100
target-version = "py314"

fix = true
show-fixes = true
output-format = "grouped"

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "RUF", # ruff-specific rules
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]

lint.ignore = [
    "D107",   # Missing docstring in __init__
    "D100",   # Missing docstring in public module
    "D203",   # 1 blank line required before class docstring (conflita com D211)
    "D212",   # Multi-line docstring summary should start at the first line
    "D205",   # 1 blank line required between summary line and description
    "D400",   # First line should end with a period
    "D401",   # First line should be in imperative mood
    "ANN001", # Missing type annotation for self in method
    "ANN002", # Missing type annotation for cls in classmethod
    "ANN003", # Missing type annotation for kwargs
]

lint.fixable = ["ALL"]
lint.unfixable = []

lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lint.isort.combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ty.environment]
root = ["./src"]
